Update to 1.20-rc1